--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "N8n": {
+    "WebhookUrl": "http://localhost:5678/webhook/generate-questions"
+  }
 }
